Fixed spacing (finally)

--- a/sales.css
+++ b/sales.css
@@ -17,7 +17,7 @@
     justify-content: center;
     align-self: center;
     align-items: center;
-    font-size: 50px;
+    font-size: 3.5em;
     align-content: center;
     color: black;
     text-align: center;
@@ -25,16 +25,15 @@
 }
 
 .header-menu1 {
-    flex: 4;
+    flex: 7;
     display: flex;
     width: 100vw;
     flex-direction: row;
     justify-content: flex-start;
-    background-color: purple;
-
 }
 
 .header-menu1-item {
+    margin: 0px 40px;
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -55,12 +54,12 @@
 .header-menu1-item-label {
     align-self: center;
     justify-content: center;
-    /* margin-top: 20px; */
+    margin-top: 20px;
 }
 
 .header-menu1-item-label-text {
     /* padding: 30px 16px; */
-    font-size: 30px;
+    font-size: 2em;
     align-content: center;
     color: black;
     text-align: center;
